# datastructures

./: CMakeLists.txt  README.md
include/datastructures/: linked_list.hpp  list.hpp  stack.hpp
include/datastructures/templates/: linked_list.tcc  list.tcc  stack.tcc
tests/: linked_list.cpp  list.cpp  stack.cpp
